tests/ui/borrowck/borrowck-partial-reinit-4.stderr
error[E0381]: assigned binding `x.0` isn't fully initialized
  --> $DIR/borrowck-partial-reinit-4.rs:17:5
   |
LL |     let mut x : (Test2, Test2);
   |         ----- binding declared here but left uninitialized
LL |     (x.0).0 = Some(Test);
   |     ^^^^^^^ `x.0` assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
